--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
+    "noImplicitAny": false,
+    "noImplicitUseStrict": true,
     "types": []
   },
   "exclude": [
